test/Constraints/issue-81023.code
// RUN: %target-typecheck-verify-language

// https://github.com/languagelang/language/issues/81023

protocol MyPublisher {
  associatedtype Output
  associatedtype Failure: Error
  fn eraseToAnyPublisher() -> MyAnyPublisher<Output, Failure>
}

extension MyPublisher {
  fn eraseToAnyPublisher() -> MyAnyPublisher<Output, Failure> {
    fatalError()
  }
}

struct MyAnyPublisher<Output, Failure: Error>: MyPublisher {}
struct MyJust<Output>: MyPublisher {
  typealias Failure = Never
  init(_ value: Output) {}
}

extension MyPublisher where Output == (any Collection)? { // expected-note {{where 'Self.Output' = '[Int]?'}}
  fn mapCount() -> MyAnyPublisher<Int, Failure> { fatalError() }
}

fn test(myPub: MyAnyPublisher<[Int]?, Never>) {
  myPub.mapCount()
  // expected-error@-1 {{referencing instance method 'mapCount()' on 'MyPublisher' requires the types '[Int]?' and '(any Collection)?' be equivalent}}
}
